# mcp-server-slides-converter

./: .gitignore  LICENSE  README.md  mcp.json  pyproject.toml  requirements.txt  slides_converter.py
